Remove custom auth
