# server/src/index.ts
@@ -33,27 +33,7 @@ const apiLimiter = rateLimit({
 	legacyHeaders: false, // Disable the `X-RateLimit-*` headers
 });
 
-const loginLimiter = rateLimit({
-	windowMs: 30 * 60 * 1000, // Half hour
-	max: 15, // Limit each IP to 15 login requests per `window` (here, per half hour)
-	message:
-		"Too many login attempts from this IP, please try again after an hour",
-	standardHeaders: true, // Return rate limit info in the `RateLimit-*` headers
-	legacyHeaders: false, // Disable the `X-RateLimit-*` headers
-});
-
-const createAccountLimiter = rateLimit({
-	windowMs: 60 * 60 * 1000, // 1 hour
-	max: 5, // Limit each IP to 5 create account requests per `window` (here, per hour)
-	message:
-		"Too many accounts created from this IP, please try again after an hour",
-	standardHeaders: true, // Return rate limit info in the `RateLimit-*` headers
-	legacyHeaders: false, // Disable the `X-RateLimit-*` headers
-});
-
 app.use("/api/", apiLimiter);
-// app.use("/api/auth/login", loginLimiter);
-app.use("/api/auth/signup", createAccountLimiter);
 
 // REST Routes
 app.use(require("./routes"));
