# server/src/models/user.model.ts
@@ -4,7 +4,6 @@ import { IPosition, PositionSchema } from "./position.model";
 
 export interface IUser extends Document {
 	username: string;
-	password: string;
 	watchlist: string[];
 	ledger: ITransaction[];
 	positions: IPosition[];
@@ -16,12 +15,6 @@ export interface IUser extends Document {
 // Create a Schema corresponding to the document interface.
 const userSchema = new Schema<IUser>({
 	username: {
-		type: String,
-		required: true,
-		unique: true,
-		trim: true,
-	},
-	password: {
 		type: String,
 		required: true,
 		unique: true,
