# server/src/routes.ts
@@ -1,30 +1,26 @@
 import express from "express";
 const router = express.Router();
-import { verifySignUp, authJwt } from "./middleware";
-import authController from "./controller/auth.controller";
+import { authProxy } from "./middleware";
 import userController from "./controller/user.controller";
 import stocksController from "./controller/stocks.controller";
 import newsController from "./controller/news.controller";
 import leaderboardController from "./controller/leaderboard.controller";
 
-// Auth routes
-router.post(
-	"/api/auth/signup",
-	[verifySignUp.checkDuplicateUsername],
-	authController.signup,
-);
-router.post("/api/auth/login", authController.login);
-
 // User data routes
-router.get("/api/user/ledger", [authJwt.verifyToken], userController.getLedger);
+router.get("/api/user/ledger", [authProxy.verifyToken], userController.getLedger);
 router.get(
 	"/api/user/holdings",
-	[authJwt.verifyToken],
+	[authProxy.verifyToken],
 	userController.getHoldings,
 );
 router.get(
+	"/api/user/username",
+	[authProxy.verifyToken],
+	userController.getUsername,
+);
+router.get(
 	"/api/user/portfolio",
-	[authJwt.verifyToken],
+	[authProxy.verifyToken],
 	userController.getPortfolio,
 );
 router.get("/api/user/leaderboard", leaderboardController.getLeaderboard);
@@ -32,17 +28,17 @@ router.get("/api/user/leaderboard", leaderboardController.getLeaderboard);
 // User watchlist routes
 router.get(
 	"/api/user/watchlist",
-	[authJwt.verifyToken],
+	[authProxy.verifyToken],
 	userController.getWatchlist,
 );
 router.post(
 	"/api/user/watchlist/add/:symbol",
-	[authJwt.verifyToken],
+	[authProxy.verifyToken],
 	userController.addToWatchlist,
 );
 router.post(
 	"/api/user/watchlist/remove/:symbol",
-	[authJwt.verifyToken],
+	[authProxy.verifyToken],
 	userController.removeFromWatchlist,
 );
 
@@ -53,13 +49,13 @@ router.get("/api/stocks/:symbol/historical", stocksController.getHistorical);
 
 router.post(
 	"/api/stocks/:symbol/buy",
-	[authJwt.verifyToken],
+	[authProxy.verifyToken],
 	stocksController.buyStock,
 );
 
 router.post(
 	"/api/stocks/:symbol/sell",
-	[authJwt.verifyToken],
+	[authProxy.verifyToken],
 	stocksController.sellStock,
 );
 
